--- a/recommender.ipynb
+++ b/recommender.ipynb
@@ -4153,7 +4153,7 @@
       "outputs": [],
       "source": [
         "import pickle\n",
-        "pickle.dump(new,open('movie_list.pkl','wb'))\n",
+        "pickle.dump(new,open('movies.pkl','wb'))\n",
         "pickle.dump(similarity,open('similarity.pkl','wb'))"
       ]
     },
